# ptouch-print

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  configure  configure.ac
build-aux/: git-version-gen
include/: ptouch.h
po/: Makevars  de.po  en.po  ptouch.pot
src/: libptouch.c  ptouch-print.c
